Fix: card title on mobile

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -33,14 +33,22 @@ p {
   p {
     font-size: 3rem;
   }
+  .card-title {
+  text-align: left;
+}
 }
 @media screen and (max-width : 570px) {
   h2 {
     font-size: 4rem;
-    margin: 1.8rem 2.8rem;
+    margin: 0 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
   }
   p {
     font-size: 2rem;
+  }
+  .card-title {
+    text-align: center;
   }
 }
 
@@ -129,10 +137,6 @@ p {
   background-color: #fcfcfc;
   /*box-shadow: 0px 0px 1px 0px #5E5E5E;*/
   margin: 1rem 0;
-}
-
-.card-title {
-  text-align: left;
 }
 
 .card-description {
